# windows_version_native_info

./: README.md  pubspec.yaml
cmake/: rust.cmake
example/: .gitignore  README.md  pubspec.yaml
example/lib/: main.dart
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: windows_version_native_info.dart  windows_version_native_info_method_channel.dart  windows_version_native_info_platform_interface.dart
rust/: Cargo.toml
rust/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs
sh/: ffi_build.sh
test/: windows_version_native_info_method_channel_test.dart  windows_version_native_info_test.dart
windows/: CMakeLists.txt  windows_version_native_info_plugin.cpp  windows_version_native_info_plugin.h  windows_version_native_info_plugin_c_api.cpp
windows/include/windows_version_native_info/: windows_version_native_info_plugin_c_api.h
windows/rust/: CMakeLists.txt  windows_version_native_info.lib
