[package]
name = "windows_version_native_info"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["staticlib", "cdylib", "rlib"]


[dependencies]
flutter_rust_bridge = "1"
os_info = "3"
tokio = {version="1.24.1",features=["full"]}